input de login/sign, email,recuperarPassword, caja de recomendacion

--- a/frontend/private/matterRaw.html
+++ b/frontend/private/matterRaw.html
@@ -217,10 +217,12 @@
   </figure>
 </template>
 
+<audio id="audio">
+    <source type="audio/wav" src="../audio/logaut.wav">
+</audio>    
     <script src="/scripts/mobile-menu.js"></script>
     <script type="module" src="/scripts/matterRaw.script.js" defer></script>
 
-        <script type="module" src="/scripts/analytics.js"></script>
 
 </body>
 </html>
