--- a/frontend/public/home.html
+++ b/frontend/public/home.html
@@ -18,12 +18,12 @@
     <div class="card-portal carousel-placeholder animation-delay-0.2">
       <div class="container-carousel">
         <div class="carousel">
-          <div class="carousel-item"><img class="carousel-img" src="https://images.unsplash.com/photo-1505765050516-f72dcac9c60e?w=500" alt="Autumn"></div>
-          <div class="carousel-item"><img class="carousel-img" src="https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=500" alt="Mountains"></div>
-          <div class="carousel-item"><img class="carousel-img" src="https://images.unsplash.com/photo-1559827260-dc66d52bef19?w=500" alt="Desert"></div>
-          <div class="carousel-item"><img class="carousel-img" src="https://images.unsplash.com/photo-1519681393784-d120267933ba?w=500" alt="Landscape"></div>
-          <div class="carousel-item"><img class="carousel-img" src="https://images.unsplash.com/photo-1540959733332-eab4deabeeaf?w=500" alt="Japan"></div>
-          <div class="carousel-item"><img class="carousel-img" src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?w=500" alt="Beach"></div>
+          <div class="carousel-item"><img class="carousel-img" src="img/ingredientes.jpg" alt="Interfaz de ingredientes "></div>
+          <div class="carousel-item"><img class="carousel-img" src="img/materia_prima.jpg" alt="Interfaz de materias primas"></div>
+          <div class="carousel-item"><img class="carousel-img" src="img/recetas.jpg" alt="Interfaz de recetas"></div>
+          <div class="carousel-item"><img class="carousel-img" src="img/login.jpg" alt="Interfaz de Login "></div>
+          <div class="carousel-item"><img class="carousel-img" src="img/sign-up.jpg" alt="Interfaz de Registro "></div>
+          <div class="carousel-item"><img class="carousel-img" src="img/cuanto_cuesta.png" alt="Cuanto Cuesta"></div>
         </div>
       </div>
     </div>
@@ -141,7 +141,6 @@ En resumen, ¿Cuánto cuesta? convierte el control de costos en un proceso simpl
 
     initEvents();
   </script>
-      <script type="module" src="/scripts/analytics.js"></script>
 
 </body>
 </html>
