--- a/frontend/public/home.html
+++ b/frontend/public/home.html
@@ -30,7 +30,7 @@
 
     <!-- Card 2 -->
     <div class="card-portal text-block animation-delay-0.4">
-      <p>¿Cuánto cuesta? es una aplicación web diseñada para ayudarte a calcular y gestionar el costo real de tus productos o recetas de forma rápida, precisa y visual.</p>
+      <p>¿Cuánto cuesta? <br> Es una aplicación web diseñada para ayudarte a calcular y gestionar el costo real de tus productos o recetas de forma rápida, precisa y visual.</p>
       <p><strong>
 El sistema permite registrar materias primas, asignarles precios y unidades de medida, y luego combinarlas en recetas o productos finales, mostrando automáticamente el costo total de producción.
 
@@ -42,13 +42,15 @@ En resumen, ¿Cuánto cuesta? convierte el control de costos en un proceso simpl
 
     <!-- Card 3 -->
     <div class="card-portal text-block animation-delay-0.6">
-      <p><strong>Texto explicando por qué se hizo esto sabiendo que existe la IA.</strong></p>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
+      <p><strong>¿Y de donde sale esta idea?</strong></p>
+      <p>Siempre me llamó la atención cómo las cosas simples pueden complicarse sin necesidad. Un amigo mío, cada vez que quería saber cuánto costaba una receta o cuántas porciones podía sacar de ella, se encontraba haciendo cálculos “sobre el aire” o preguntándole a un LLM para intentar resolverlo. Viendo eso, decidí crear algo que realmente lo ayudara: una web donde cualquiera pueda calcular el costo de sus recetas y porciones de manera rápida, práctica y sin gastar un peso.
+
+El proyecto nace de esa necesidad cotidiana, de simplificar lo que antes era un pequeño quebradero de cabeza, y al mismo tiempo de poner la tecnología al servicio de algo útil y accesible. Es una mezcla de curiosidad, amistad y ganas de resolver problemas reales de forma simple.</p>
     </div>
 
     <!-- Card 4 - Demo -->
     <section class="demo-section card-portal animation-delay-0.6">
-      <h2>DEMO</h2>
+      <h2>Flujo de uso</h2>
       <div class="demo-video-placeholder">
         <video style=" width: 90%;" class="demo-video" src="audio/Desglosando__Cuanto_Cuesta_.mp4" controls ></video>
       </div>
