--- a/frontend/public/pages/login.html
+++ b/frontend/public/pages/login.html
@@ -46,7 +46,10 @@
           <svg class="input-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
             <path d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6-3c0-1.66 1.34-3 3-3s3 1.34 3 3v2h-6V6z"/>
           </svg>
-          <input placeholder="Password" class="input-field" id="password" type="password">
+          <input placeholder="Password" class="input-field eye" id="password" type="password">
+          <svg class="input-icon eye-toggle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" onclick="mostrarContraseña(event)" style="cursor: pointer;">
+              <path d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"/>
+          </svg>
         </div>
         <!-- Mensaje de error (opcional) -->
         <div class="message-area">
