--- a/frontend/private/ingredientes.html
+++ b/frontend/private/ingredientes.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-status-bar-style" content="black-translucent">
+    <link rel="icon" type="image/png" href="../img/logo.png" />
      <title>Gestión de Ingredientes</title>
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="/css/style.css">
@@ -21,6 +22,10 @@
           <div class="brand-subtitle">Calculadora Enorme</div>
         </div>
         <nav class="sidebar-nav" role="navigation" aria-label="Navegación principal">
+          <a href="home.html" class="nav-item" onclick="showSection('home')">
+            <span class="nav-icon">🏠​</span>
+            <span class="nav-label">Inicio</span>
+          </a>
           <a href="matterRaw" class="nav-item" onclick="showSection('materials')">
             <span class="nav-icon">📦</span>
             <span class="nav-label">Materia Prima</span>
