--- a/frontend/private/matterRaw.html
+++ b/frontend/private/matterRaw.html
@@ -5,6 +5,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+  <link rel="icon" type="image/png" href="../img/logo.png" />
 
     <title>Matter Raw Professional</title>
     <link rel="stylesheet" href="/css/style.css">
@@ -22,6 +23,10 @@
         <div class="brand-subtitle">Calculadora Enorme</div>
       </div>
       <nav class="sidebar-nav" role="navigation " aria-label="Navegación principal">
+        <a href="home.html" class="nav-item" onclick="showSection('home')">
+            <span class="nav-icon">🏠​</span>
+            <span class="nav-label">Inicio</span>
+        </a>
         <a href="matterRaw" class="nav-item active" onclick="showSection('materials')">
           <span class="nav-icon">📦</span>
           <span class="nav-label">Materia Prima</span>
