--- a/frontend/public/home.html
+++ b/frontend/public/home.html
@@ -5,6 +5,7 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+<link rel="icon" type="image/png"  href="img/logo.png" />
 <title>Cuanto Cuesta - Portal de Acceso</title>
 <link rel="stylesheet" href="css/style.css">
 </head>
@@ -23,7 +24,7 @@
           <div class="carousel-item"><img class="carousel-img" src="img/recetas.jpg" alt="Interfaz de recetas"></div>
           <div class="carousel-item"><img class="carousel-img" src="img/login.jpg" alt="Interfaz de Login "></div>
           <div class="carousel-item"><img class="carousel-img" src="img/sign-up.jpg" alt="Interfaz de Registro "></div>
-          <div class="carousel-item"><img class="carousel-img" src="img/cuanto_cuesta.png" alt="Cuanto Cuesta"></div>
+          <div class="carousel-item"><img class="carousel-img" src="img/cuanto cuesta.png" alt="Cuanto Cuesta"></div>
         </div>
       </div>
     </div>
