--- a/frontend/private/recetas.html
+++ b/frontend/private/recetas.html
@@ -5,7 +5,9 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">  <meta name="description" content="Gestiona tus recetas y calcula costos de producción">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="icon" type="image/png" href="../img/logo.png" />
+
+    <link rel="stylesheet" href="/css/style.css">
   <title>Mis Recetas - ¿Cuanto Cuesta?</title>
 </head>
 <body class="app-body">
@@ -22,6 +24,10 @@
         <div class="brand-subtitle">Calculadora Enorme</div>
       </div>
       <nav class="sidebar-nav" role="navigation " aria-label="Navegación principal">
+        <a href="home.html" class="nav-item" onclick="showSection('home')">
+            <span class="nav-icon">🏠​</span>
+            <span class="nav-label">Inicio</span>
+        </a>
         <a href="matterRaw" class="nav-item" onclick="showSection('materials')">
           <span class="nav-icon">📦</span>
           <span class="nav-label">Materia Prima</span>
