--- a/frontend/public/pages/login.html
+++ b/frontend/public/pages/login.html
@@ -62,6 +62,14 @@
           <button class="button button2" type="button" onclick="window.location.href='./sign-up.html'">Sign Up</button>
 
         </div>
+        <button class="button farcaster-btn" type="button" id="farcasterLogin">
+          <svg width="20" height="20" viewBox="0 0 1000 1000" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M257.778 155.556H742.222V844.444H671.111V528.889H670.414C662.554 441.677 589.258 373.333 500 373.333C410.742 373.333 337.446 441.677 329.586 528.889H328.889V844.444H257.778V155.556Z" fill="currentColor"/>
+            <path d="M128.889 253.333L157.778 351.111H182.222V746.667C182.222 796.103 221.731 835.556 271.111 835.556H318.889V746.667H271.111V253.333H128.889Z" fill="currentColor"/>
+            <path d="M872.222 253.333L843.333 351.111H818.889V746.667C818.889 796.103 779.38 835.556 730 835.556H682.222V746.667H730V253.333H872.222Z" fill="currentColor"/>
+          </svg>
+          Login in with Farcaster
+        </button>
         <button class="button button3" type="button">Forgot Password</button>
       </form>
     </div>
