--- a/frontend/private/ingredientes.html
+++ b/frontend/private/ingredientes.html
@@ -9,6 +9,33 @@
      <title>Gestión de Ingredientes</title>
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="/css/style.css">
+    <meta name="fc:miniapp" content='{
+  "version": "1",
+  "imageUrl": "https://cuesta-tanto.onrender.com/splash.png",
+  "button": {
+    "title": "Cuanto Cuesta",
+    "action": {
+      "type": "launch_miniapp",
+      "name": "Cuanto Cuesta",
+      "url": "https://cuesta-tanto.onrender.com",
+      "splashImageUrl": "https://cuesta-tanto.onrender.com/splash.png",
+      "splashBackgroundColor": "#1a1a1a"
+    }
+  }
+}' />
+<meta name="fc:frame" content='{
+  "version": "1",
+  "imageUrl": "https://cuesta-tanto.onrender.com/splash.png",
+  "button": {
+    "title": "Cuanto Cuesta",
+    "action": {
+      "type": "launch_frame",
+      "name": "Cuanto Cuesta",
+      "url": "https://cuesta-tanto.onrender.com"
+    }
+  }
+}' />
+
     </head>
     <body class="app-body">
 
