--- a/frontend/public/pages/sign-up.html
+++ b/frontend/public/pages/sign-up.html
@@ -6,6 +6,33 @@
   <link rel="icon" type="image/png" href="../img/logo.png" />
   <title>Sign Up Door Animation</title>
 <link rel="stylesheet" href="../css/style.css">
+<meta name="fc:miniapp" content='{
+  "version": "1",
+  "imageUrl": "https://cuesta-tanto.onrender.com/splash.png",
+  "button": {
+    "title": "Cuanto Cuesta",
+    "action": {
+      "type": "launch_miniapp",
+      "name": "Cuanto Cuesta",
+      "url": "https://cuesta-tanto.onrender.com",
+      "splashImageUrl": "https://cuesta-tanto.onrender.com/splash.png",
+      "splashBackgroundColor": "#1a1a1a"
+    }
+  }
+}' />
+<meta name="fc:frame" content='{
+  "version": "1",
+  "imageUrl": "https://cuesta-tanto.onrender.com/splash.png",
+  "button": {
+    "title": "Cuanto Cuesta",
+    "action": {
+      "type": "launch_frame",
+      "name": "Cuanto Cuesta",
+      "url": "https://cuesta-tanto.onrender.com"
+    }
+  }
+}' />
+
 
 </head>
 <body class="box">
