--- a/frontend/private/ingredientes.html
+++ b/frontend/private/ingredientes.html
@@ -7,6 +7,7 @@
     <meta name="mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="icon" type="image/png" href="../img/logo.png" />
      <title>Gestión de Ingredientes</title>
+     <meta name="base:app_id" content="6939d14ce6be54f5ed71d53d"/>
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="/css/style.css">
     <meta name="fc:miniapp" content='{
