--- a/frontend/private/recetas.html
+++ b/frontend/private/recetas.html
@@ -6,7 +6,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">  <meta name="description" content="Gestiona tus recetas y calcula costos de producción">
   <link rel="icon" type="image/png" href="../img/logo.png" />
-
+<meta name="base:app_id" content="6939d14ce6be54f5ed71d53d"/>
     <link rel="stylesheet" href="/css/style.css">
     <meta name="fc:miniapp" content='{
   "version": "1",
