--- a/frontend/public/home.html
+++ b/frontend/public/home.html
@@ -8,6 +8,7 @@
 <link rel="icon" type="image/png"  href="img/logo.png" />
 <title>Cuanto Cuesta - Portal de Acceso</title>
 <link rel="stylesheet" href="css/style.css">
+<meta name="base:app_id" content="6939d14ce6be54f5ed71d53d"/>
 <meta name="fc:miniapp" content='{
   "version": "1",
   "imageUrl": "https://cuesta-tanto.onrender.com/splash.png",
