--- a/frontend/public/pages/login.html
+++ b/frontend/public/pages/login.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link rel="icon" type="image/png" href="../img/logo.png" />
-
+<meta name="base:app_id" content="6939d14ce6be54f5ed71d53d"/>
   <title>Login Door Animation</title>
 <link rel="stylesheet" href="../css/style.css">
 <meta name="fc:miniapp" content='{
