--- a/frontend/private/matterRaw.html
+++ b/frontend/private/matterRaw.html
@@ -6,7 +6,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <link rel="icon" type="image/png" href="../img/logo.png" />
-
+<meta name="base:app_id" content="6939d14ce6be54f5ed71d53d"/>
     <title>Matter Raw Professional</title>
     <meta name="fc:miniapp" content='{
   "version": "1",
